Fixing the background on mobile

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -34,5 +34,6 @@
         margin: 10px;
         height: 255px;
         position: relative;
+        background-color: var(--white);
     }
 }
